# car-plate-detector

./: .clang-format  .gitignore  CMakeLists.txt  create-training-data.sh
data/tesseract/models/: rus-car-plate-number.traineddata
data/tesseract/text/: RoadNumbers.exp0.gt.txt  rus.RoadNumbers.exp0.gt.txt  rus.RoadNumbers.exp1.gt.txt
src/: carplatenumberdetector_russian.cpp  carplatenumberdetector_russian.h  main.cpp
src/base/: carplatenumberdetector.cpp  carplatenumberdetector.h
src/misc/: logger.h  ocr.cpp  ocr.h
tests/: tst_carplatenumber.cpp
